--- a/fee/game/Assembly-CSharp.csproj
+++ b/fee/game/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\SceneMagna.cs" />
     <Compile Include="Assets\Scripts\Rodar.cs" />
     <Compile Include="Assets\move.cs" />
     <Reference Include="UnityEngine">
